--- a/code.html
+++ b/code.html
@@ -21,6 +21,13 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
+<li><p><a href="https://github.com/lttam/SobolevTransport" target=&ldquo;blank&rdquo;>Sobolev Transport</a>. (AISTATS 2022)</p>
+<ul>
+<li><p>A scalable variant of optimal transport for probability measures supported on a graph metric space.</p>
+</li>
+<li><p>(i) closed-form expression for fast computation; (ii) negative definite metric which allows to build positive definite kernels.</p>
+</li></ul>
+</li>
 <li><p><a href="https://github.com/lttam/Adversarial-Regression" target=&ldquo;blank&rdquo;>Adversarial Regression with Doubly Non-negative Weighting Matrices</a>. (NeurIPS 2021)</p>
 <ul>
 <li><p>An adversarial regression (e.g., for Nadaraya-Watson, for locally linear regression, for support vector regression).</p>
@@ -83,7 +90,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-14 08:40:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-06-14 23:56:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
