--- a/professional.html
+++ b/professional.html
@@ -30,9 +30,11 @@
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
 </li>
 </ul>
-<p><b>Senior Program Committee</b></p>
+<p><b>Area Chair / Senior Program Committee</b></p>
 <ul>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
+</li>
+<li><p>Asian Conference on Machine Learning (ACML): 2022</p>
 </li>
 </ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
@@ -129,7 +131,7 @@
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2022.</p>
 </li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2021.</p>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022.</p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.</p>
 </li>
@@ -169,7 +171,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-14 08:40:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-06-14 23:56:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
