--- a/publication.html
+++ b/publication.html
@@ -23,8 +23,7 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2202.10723.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> . <br />
-
+<li><p><a href="Download" target=&ldquo;blank&rdquo;>PDF <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> .  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2022. (<i>Acceptance rate: 492/1685=29.2%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen</p>
 </li>
@@ -166,7 +165,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Invited Talks</b></p>
 <ul>
-<li><p>[Upcoming] 2022, <font color="blue">Geometric Approaches for Persistence Diagrams in Topological Data Analysis</font>, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual.</p>
+<li><p>2022, <font color="blue">Geometric Approaches for Persistence Diagrams in Topological Data Analysis</font>, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual. [<a href="https://www.dropbox.com/s/hd8c61gui6n55py/TamLe_APATG2022_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2022, <font color="blue">On Scalability of Optimal Transport with Tree/Graph metric</font>, AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>), Virtual. [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
@@ -189,7 +188,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-14 08:40:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-06-14 23:56:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
