--- a/professional.html
+++ b/professional.html
@@ -30,11 +30,13 @@
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
 </li>
 </ul>
-<p><b>Area Chair / Senior Program Committee</b></p>
+<p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> </p>
 <ul>
-<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
+<li><p>Meta-reviewer, Machine Learning Journal (MLJ): 2022(1)</p>
 </li>
-<li><p>Asian Conference on Machine Learning (ACML): 2022</p>
+<li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
+</li>
+<li><p>AC, Asian Conference on Machine Learning (ACML): 2022</p>
 </li>
 </ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
@@ -43,9 +45,9 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2022</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2022</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2023</p>
 </li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022</p>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2023</p>
 </li>
 <li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1), 2021(1)</p>
 </li>
@@ -57,7 +59,7 @@
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
 </li>
-<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2022</p>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2023</p>
 </li>
 <li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021</p>
 </li>
@@ -125,7 +127,7 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2021.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2022.</p>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2021.</p>
 </li>
@@ -171,7 +173,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-14 23:59:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-08-27 11:46:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
