--- a/publication.html
+++ b/publication.html
@@ -165,6 +165,8 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Invited Talks</b></p>
 <ul>
+<li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures on Graphs</font>, Kyoto Machine Learning workshop, Kyoto University, Japan (hybrid).</p>
+</li>
 <li><p>2022, <font color="blue">Geometric Approaches for Persistence Diagrams in Topological Data Analysis</font>, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual. [<a href="https://www.dropbox.com/s/hd8c61gui6n55py/TamLe_APATG2022_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2022, <font color="blue">On Scalability of Optimal Transport with Tree/Graph metric</font>, AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>), Virtual. [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
@@ -188,7 +190,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-14 23:59:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-08-27 11:46:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
