--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
 Assistant Professor <br />
 <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> <br />
-Department of Mathematical Analysis and Statistical Inference</p>
+<a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;>Department of Statistical Inference and Mathematics</a></p>
 </td></tr></table>
 <p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
-<p>Email: lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/qgy5wnjthj20wu8/TamLe2022Jun.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated June, 2022.</p>
+<h2>Contact</h2>
+<div class="infoblock">
+<div class="blockcontent">
+<p>10-3 Midori-cho, Tachikawa, Tokyo 190-8562, Japan <br />
+Email: tam[<i>at</i>]ism.ac.jp or lttam.vn[<i>at</i>]gmail.com <br />
+Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br /></p>
+</div></div>
+<p>My CV is <a href="https://www.dropbox.com/s/qgy5wnjthj20wu8/TamLe2022Jun.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated June, 2022.</p>
 <h2>News</h2>
 <ul>
 <li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor.</p>
@@ -119,7 +125,7 @@ My CV is <a href="https://www.dropbox.com/s/qgy5wnjthj20wu8/TamLe2022Jun.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-31 23:11:25 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-09 16:11:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
