--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Assistant Professor <br />
 <div class="infoblock">
 <div class="blockcontent">
 <p>10-3 Midori-cho, Tachikawa, Tokyo 190-8562, Japan <br />
-Email: tam[<i>at</i>]ism.ac.jp or lttam.vn[<i>at</i>]gmail.com <br />
+Email: tam[<i>at</i>]ism.ac.jp (or le.tam[<i>at</i>]ism.ac.jp; lttam.vn[<i>at</i>]gmail.com) <br />
 Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;blank&rdquo;>Access to ISM</a> <br /></p>
 </div></div>
 <p>My CV is <a href="https://www.dropbox.com/s/kbornqy59crpgqf/TamLe2022Sep.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated September, 2022.</p>
@@ -103,7 +103,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-12 22:43:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-19 15:08:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
