--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <table class="imgtable"><tr><td>
 <a href="TamLeANU13.jpg"><img src="TamLeANU13.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
-Assistant Professor <br />
-<a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> <br />
-<a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;>Department of Statistical Inference and Mathematics</a></p>
+Assistant Professor, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;>Department of Statistical Inference and Mathematics</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Department of Statistical Science</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a> <br />
+Upcoming Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a><br /></p>
 </td></tr></table>
 <p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
 <h2>Contact</h2>
@@ -38,7 +38,9 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p>My CV is <a href="https://www.dropbox.com/s/kbornqy59crpgqf/TamLe2022Sep.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated September, 2022.</p>
 <h2>News</h2>
 <ul>
-<li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor.</p>
+<li><p>19-Oct-2022, I will be a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a> from December 1st, 2022.</p>
+</li>
+<li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor. I am also an Assistant Professor at <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.</p>
 </li>
 <li><p>26-Jul-2022, I give an invited talk at Kyoto Machine Learning workshop.</p>
 </li>
@@ -69,6 +71,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <h2>Research Experience</h2>
 <ul>
 <li><p>09/2022 - present, Assistant Professor, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>.</p>
+</li>
+<li><p>09/2022 - present, Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.</p>
+</li>
+<li><p>From 12/2022, Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 </li>
 <li><p>08/2021 - 08/2022, Research Scientist, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 <ul>
@@ -103,7 +109,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-20 14:25:29 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-10-19 15:11:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
