--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <table class="imgtable"><tr><td>
 <a href="TamLeANU13.jpg"><img src="TamLeANU13.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
-Assistant Professor, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;>Department of Statistical Inference and Mathematics</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> <br />
+<b>Assistant Professor</b>, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;><b>Department of Statistical Inference and Mathematics</b></a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a> <br />
 Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Department of Statistical Science</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a> <br />
 Upcoming Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a><br /></p>
 </td></tr></table>
@@ -109,7 +109,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-19 16:20:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-11-02 10:56:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
