--- a/publication.html
+++ b/publication.html
@@ -165,6 +165,8 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Invited Talks</b></p>
 <ul>
+<li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/hymi91etc7crl5e/TamLe_2022Nov_ISM%20Seminar_40min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+</li>
 <li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures on Graphs</font>, Kyoto Machine Learning workshop, Kyoto University, Japan (hybrid).</p>
 </li>
 <li><p>2022, <font color="blue">Geometric Approaches for Persistence Diagrams in Topological Data Analysis</font>, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual. [<a href="https://www.dropbox.com/s/hd8c61gui6n55py/TamLe_APATG2022_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
@@ -190,7 +192,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-05 20:24:11 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-12-25 22:25:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
