--- a/publication.html
+++ b/publication.html
@@ -148,24 +148,28 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 <h2>Workshop Posters / Talks</h2>
 <p><b>Workshop Posters</b></p>
 <ul>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">Safe Grid Search with Optimal Complexity</font>. <a href="https://miaoxu-ml.github.io/aip_workshop.html" target=&ldquo;blank&rdquo;>The ACML&rsquo;2019 RIKEN AIP Workshop</a>, 2019.</p>
+<li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font>, <a href="https://roisxtalk2022.rois.jp/english" target=&ldquo;blank&rdquo;>ROIS Crosstalk</a>, Virtual. </p>
 </li>
-<li><p>2019, <font color="blue">Tree-Sliced Approximation of Wasserstein Distances</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">Safe Grid Search with Optimal Complexity</font>. <a href="https://miaoxu-ml.github.io/aip_workshop.html" target=&ldquo;blank&rdquo;>The ACML&rsquo;2019 RIKEN AIP Workshop</a>, Japan, 2019.</p>
 </li>
-<li><p>2019, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>.</p>
+<li><p>2019, <font color="blue">Tree-Sliced Approximation of Wasserstein Distances</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
 </li>
-<li><p>2018, <a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>.</p>
+<li><p>2019, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea.</p>
 </li>
-<li><p>2018, <font color="blue">Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>. </p>
+<li><p>2018, <a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>, Sweden.</p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Approximation for regularization and validation path</font></a>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, 2018.</p>
+<li><p>2018, <font color="blue">Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, US. </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</font>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, 2018.</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Approximation for regularization and validation path</font></a>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, France, 2018.</p>
+</li>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</font>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, France, 2018.</p>
 </li>
 </ul>
 <p><b>Invited Talks</b></p>
 <ul>
 <li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/hymi91etc7crl5e/TamLe_2022Nov_ISM%20Seminar_40min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+</li>
+<li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Optimal Transport Seminar, <a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>, Virtual. </p>
 </li>
 <li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures on Graphs</font>, Kyoto Machine Learning workshop, Kyoto University, Japan (hybrid).</p>
 </li>
@@ -192,7 +196,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-25 22:25:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-01-05 16:35:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
