--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p>My CV is <a href="https://www.dropbox.com/s/kbornqy59crpgqf/TamLe2022Sep.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated September, 2022.</p>
 <h2>News</h2>
 <ul>
+<li><p>21-Jan-2023, Our paper, entitled <a href="to-appear" target=&ldquo;blank&rdquo;>&ldquo;Scalable Unbalanced Sobolev Transport for Measures on a Graph&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2023/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;23</b></a>! This is joint work with Kenji Fukumizu, and Truyen Nguyen.  </p>
+</li>
 <li><p>01-Dec-2022, I am officially appointed as a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 </li>
 <li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor. I am also an Assistant Professor at <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.</p>
@@ -109,7 +111,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-05 16:35:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-01-21 10:44:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
