--- a/publication.html
+++ b/publication.html
@@ -23,6 +23,12 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="to-appear" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a> .  <br />
+International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2023. (<i>Acceptance rate: &nbsp;29% (1689)</i>) <br /> 
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://proceedings.mlr.press/v151/le22b/le22b.pdf" target=&ldquo;blank&rdquo;><font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font></a> .  [<a href="https://slideslive.com/38980758/sobolev-transport-a-scalable-metric-for-probability-measures-with-graph-metrics?ref=speaker-17801" target=&ldquo;blank&rdquo;>Video</a>/<a href="https://proceedings.mlr.press/v151/le22b/le22b-supp.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/eg4pw4rw960bho1/LNPN_AISTATS2022_SobolevTransport_Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2022. (<i>Acceptance rate: 492/1685=29.2%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Dinh Phung, Viet Anh Nguyen</p>
@@ -196,7 +202,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-05 16:35:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-01-21 10:44:26 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
