--- a/publication.html
+++ b/publication.html
@@ -189,7 +189,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </li>
 <li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/hymi91etc7crl5e/TamLe_2022Nov_ISM%20Seminar_40min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
-<li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Optimal Transport Seminar, <a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>, Virtual. </p>
+<li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Optimal Transport Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Virtual. </p>
 </li>
 <li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures on Graphs</font>, Kyoto Machine Learning workshop, Kyoto University, Japan (hybrid).</p>
 </li>
@@ -216,7 +216,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-15 18:39:52 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-02-15 18:42:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
