--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p>My CV is <a href="https://www.dropbox.com/s/kbornqy59crpgqf/TamLe2022Sep.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated September, 2022.</p>
 <h2>News</h2>
 <ul>
-<li><p>21-Jan-2023, Our paper, entitled <a href="to-appear" target=&ldquo;blank&rdquo;>&ldquo;Scalable Unbalanced Sobolev Transport for Measures on a Graph&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2023/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;23</b></a>! This is joint work with Kenji Fukumizu, and Truyen Nguyen.  </p>
+<li><p>21-Jan-2023, Our paper, entitled <a href="https://arxiv.org/pdf/2302.12498.pdf" target=&ldquo;blank&rdquo;>&ldquo;Scalable Unbalanced Sobolev Transport for Measures on a Graph&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2023/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;23</b></a>! This is joint work with Kenji Fukumizu, and Truyen Nguyen.  </p>
 </li>
 <li><p>01-Dec-2022, I am officially appointed as a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 </li>
@@ -111,7 +111,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-15 18:42:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-02-27 17:06:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
