--- a/publication.html
+++ b/publication.html
@@ -23,7 +23,7 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="to-appear" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a> .  <br />
+<li><p><a href="https://arxiv.org/pdf/2302.12498.pdf" target=&ldquo;blank&rdquo;><font color="blue">Scalable Unbalanced Sobolev Transport for Measures on a Graph</font></a> .  <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2023. (<i>Acceptance rate: 496/1686=29.4%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Kenji Fukumizu.</p>
 </li>
@@ -216,7 +216,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-15 18:42:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-02-27 17:06:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
