--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 <table class="imgtable"><tr><td>
 <a href="TamLeANU13.jpg"><img src="TamLeANU13.jpg" alt="Tam Le" width="150px" height="178px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
-<b>Assistant Professor</b>, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;><b>Department of Statistical Inference and Mathematics</b></a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a> <br />
-Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Department of Statistical Science</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a> <br />
-Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a><br /></p>
+<b>Assistant Professor</b>, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;><b>Department of Statistical Inference and Mathematics</b></a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;><b>The Institute of Statistical Mathematics (ISM)</b></a>. <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>ISM</a>. <br />
+Assistant Professor, <a href="https://www.ism.ac.jp/senkou_eng/" target=&ldquo;blank&rdquo;>Department of Statistical Science</a>, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
+Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
-<p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
+<p>Research interests: Optimal transport, tree-Wasserstein geometry, Sobolev transport, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, robust algorithms. <br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -72,7 +73,9 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>09/2022 - present, Assistant Professor, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>.</p>
+<li><p>09/2022 - present, Assistant Professor, <a href="https://www.ism.ac.jp/organization/sec_analysis_e.html" target=&ldquo;blank&rdquo;>Department of Statistical Inference and Mathematics</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>.</p>
+</li>
+<li><p>03/2023 - present, Assistant Professor, <a href="https://www.ism.ac.jp/noe/sml-center/en/index.html" target=&ldquo;blank&rdquo;>Research Center for Statistical Machine Learning</a>, <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>. <br /></p>
 </li>
 <li><p>09/2022 - present, Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.</p>
 </li>
@@ -111,7 +114,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-27 17:06:47 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-03-09 15:42:24 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
