--- a/professional.html
+++ b/professional.html
@@ -87,6 +87,13 @@
 <li><p>International Conference on Information and Knowledge Management (CIKM): 2017</p>
 </li>
 </ul>
+<h2>Visitors / ISM Joint-Research</h2>
+<ul>
+<li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023)</p>
+</li>
+<li><p><a href="https://thongpham.net/" target=&ldquo;blank&rdquo;>Thong Pham</a> (Shiga University): <a href="https://www.ism.ac.jp/kyodo/index_j.html" target=&ldquo;blank&rdquo;>ISM Joint-research</a> FY2023</p>
+</li>
+</ul>
 <h2>Teaching Assistant</h2>
 <p><b><a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a></b> (for M.Sc. program)<br /></p>
 <ul>
@@ -173,7 +180,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-20 15:11:12 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-04-20 17:30:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
