--- a/professional.html
+++ b/professional.html
@@ -36,7 +36,7 @@
 </li>
 <li><p>SPC, International Joint Conference on Artificial Intelligence (IJCAI): 2021-2022</p>
 </li>
-<li><p>AC, Asian Conference on Machine Learning (ACML): 2022</p>
+<li><p>AC, Asian Conference on Machine Learning (ACML): 2022-2023</p>
 </li>
 </ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
@@ -138,7 +138,7 @@
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2022.</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2022.</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2023.</p>
 </li>
 <li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022.</p>
 </li>
@@ -180,7 +180,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-20 17:30:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-05-07 15:37:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
